--- a/package.json
+++ b/package.json
@@ -28,13 +28,14 @@
   },
   "scripts": {
     "compile": "babel -q src",
-    "test": "BABEL_ENV=test tap test/*.js --node-arg=--require --node-arg=babel-register | tap-mocha-reporter spec",
+    "test": "jasmine",
     "pretest": "standard && echint",
     "coverage": "BABEL_ENV=test tap test/*.js --coverage --nyc-arg=--require --nyc-arg=babel-register",
     "codeclimate": "nyc report --reporter=text-lcov | codeclimate-test-reporter",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "standard": {
+    "globals": [ "describe", "it", "expect" ],
     "ignore": [
       "lib/**"
     ]
